# IME

./: .gitignore  CMakeLists.txt  README.md  build_script.py  dev.bat  vcpkg-configuration.json  vcpkg.json
.github/workflows/: release-macos.yml  sync-aur-fcitx5.yml
fcitx5/: CMakeLists.txt  vcpkg.json
fcitx5/fcitx5/: addon.conf.in  ime_config.hpp  ime_engine.cpp  inputmethod.conf.in  plugin.json.in
fcitx5/gui/: main.cpp  main_window.cpp  main_window.hpp
fcitx5/packaging/: ime-fcitx5-config.desktop.in
fcitx5/service/: llama_backend.cpp  service_app.cpp  service_main.cpp
fcitx5/shared/config/: config.cpp
fcitx5/shared/engine/: service_client.cpp
fcitx5/shared/protocol/: json_codec.cpp  json_codec.hpp
fcitx5/tests/: CMakeLists.txt  check_fcitx5_metadata.cmake  config_tests.cpp  llama_backend_tests.cpp  protocol_tests.cpp  service_app_tests.cpp  service_client_tests.cpp  service_socket_tests.cpp  test_main.cpp
linux/: CMakeLists.txt  vcpkg.json
linux/cmake/: FindFcitx5.cmake  LlamaCpp.cmake
linux/fcitx5/: addon.conf.in  ime_config.cpp  ime_config.hpp  ime_engine.cpp  ime_engine.hpp  inputmethod.conf.in
linux/gui/: main.cpp  main_window.cpp  main_window.hpp
linux/packaging/: ime-linux-config.desktop.in
linux/service/: llama_backend.cpp  llama_backend.hpp  service_app.cpp  service_app.hpp  service_main.cpp  token_filter.hpp
linux/shared/: ime_linux_shared.cpp
linux/shared/bopomofo/: keymap.cpp  keymap.hpp  syllable.cpp  syllable.hpp  table_engine.cpp  table_engine.hpp
linux/shared/buffer/: composition_buffer.cpp  composition_buffer.hpp
linux/shared/config/: config.cpp  config.hpp
linux/shared/engine/: fallback_engine.cpp  fallback_engine.hpp  service_client.cpp  service_client.hpp
linux/shared/ipc/: unix_socket.cpp  unix_socket.hpp
linux/shared/protocol/: json_codec.cpp  json_codec.hpp  protocol.hpp
linux/shared/text/: utf.cpp  utf.hpp
linux/tests/: CMakeLists.txt  bopomofo_tests.cpp  buffer_tests.cpp  check_fcitx5_metadata.cmake  config_tests.cpp  llama_backend_tests.cpp  protocol_tests.cpp  service_app_tests.cpp  service_client_tests.cpp  test_main.cpp
packaging/aur/llavon-ime-fcitx5-git/: .SRCINFO  PKGBUILD
packaging/macos/: uninstall.sh
packaging/macos/scripts/: postinstall
scripts/: bopomofo_process.py  convert_ime_hf_to_gguf.py  package-macos.sh  register.ps1  tsf_udp_debug_receiver.py  unregister.ps1
scripts/2/: register.ps1  unregister.ps1
service/: CMakeLists.txt
service/src/: main.cpp
service/src/core/: bopomofo.hpp
service/src/engine/: engine.h  llamaEngine.hpp  onnxEngine.hpp  tokenizer.hpp
service/src/pipe/: server.hpp
service/src/utils/: paths.hpp
tables/: bopomofo_char.json
tsf/: CMakeLists.txt
tsf/src/: dllmain.cpp
tsf/src/core/: bopomofo.hpp  bopomofoBuffer.hpp  buffer.hpp
tsf/src/engine/: engine.hpp
tsf/src/engine/impl/: engine.h  llamaEngine.hpp  pipeEngine.hpp  tokenizer.hpp
tsf/src/engine/impl/npu/: cpuonnx.hpp  onnxEngine.hpp
tsf/src/system/: classFactory.hpp  globals.h  register.hpp  sysutil.hpp
tsf/src/tsf/: candidateListUI.h  candidateListUI.hpp  textService.cpp  textService.h
tsf/src/ui/: candidateWindow.hpp  window.hpp
tsf/src/utils/: debugSink.hpp  healper.hpp
tsf_service/src/tsf/: register.cpp  textService.cpp
